[package]
name = "level1"
version = "0.1.0"
authors = ["EliudArudo <eliudarudo@gmail.com>"]
edition = "2018"

[dependencies]
serde = "1.0.80"
serde_derive = "1.0.80"
serde_json = "1.0.32"
lazy_static = "1.3.0"

rocket = "0.4.1"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["json"]